# canapi

./: .travis.yml  canapi.cabal  stack.yaml
demo/: Main.hs
demo/Main/: HCurrying.hs
