name: canapi
version: 0.1
category: Web
synopsis: Simplistic DSL for clean REST APIs
homepage: https://github.com/nikita-volkov/canapi
bug-reports: https://github.com/nikita-volkov/canapi/issues
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2019, Nikita Volkov
license: MIT
license-file: LICENSE
build-type: Simple
cabal-version: >=1.10

source-repository head
  type: git
  location: git://github.com/nikita-volkov/canapi.git

library
  hs-source-dirs: library
  exposed-modules:
    Canapi
  other-modules:
    Canapi.Optima.ParamGroup
    Canapi.Prelude
  default-extensions: Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language: Haskell2010
  build-depends:
    base >=4.10 && <5,
    bytestring >=0.10.8 && <0.11,
    cereal >=0.5.8.1 && <0.6,
    fx,
    http-types >=0.12 && <0.13,
    mmorph >=1.1 && <2,
    optima >=0.4 && <0.5,
    text >=1.2 && <2,
    transformers >=0.5 && <0.6,
    wai >=3.2 && <3.3,
    wai-cors >=0.2.7 && <0.3,
    warp >=3.2 && <3.4
